# idempo

./: Cargo.toml  README.md
benches/: benchmark.rs
examples/: advanced.rs  basic.rs
src/: config.rs  error.rs  lib.rs  policy.rs
tests/: integration.rs  public_api.rs
