[package]
name = "idempo"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Idempotency policies and storage abstractions for Rust services with predictable, testable replay behavior."
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourname/idempo"
documentation = "https://docs.rs/idempo"
keywords = ["idempotency", "middleware", "distributed-systems", "http", "grpc"]
categories = ["web-programming", "network-programming", "asynchronous"]
readme = "README.md"

[features]
default = []
axum = []
tonic = []

[dependencies]

[dev-dependencies]
